# aimldsdl

./: README.md
Crew AI Projects/debater_agents/: pyproject.toml
Crew AI Projects/debater_agents/output/: propose.md
Crew AI Projects/debater_agents/src/debater_agents/: crew.py
Crew AI Projects/debater_agents/src/debater_agents/config/: tasks.yaml
Crew AI Projects/debater_agents/src/debater_agents/frontend/: app.py
Crew AI Projects/finance_agent/: README.md  pyproject.toml  requirements.txt
Crew AI Projects/finance_agent/output/: report.md
Crew AI Projects/finance_agent/src/finance_agent/: crew.py  main.py
Crew AI Projects/finance_agent/src/finance_agent/backend/: api.py
Crew AI Projects/finance_agent/src/finance_agent/config/: agents.yaml
Crew AI Projects/finance_agent/src/finance_agent/frontend/: app.py
Crew AI Projects/stock_agents/: README.md  pyproject.toml
Crew AI Projects/stock_agents/src/stock_agents/: crew.py  main.py
Debate/debater_agents/: README.md  pyproject.toml
Debate/debater_agents/output/: decide.md  oppose.md  propose.md
Debate/debater_agents/src/debater_agents/: api.py  app.py  crew.py  main.py
Debate/debater_agents/src/debater_agents/backend/: main.py
Debate/debater_agents/src/debater_agents/config/: agents.yaml  tasks.yaml
Debate/debater_agents/src/debater_agents/frontend/: app.py
OpenAISDK/: agents sdk.ipynb  readme.md
kd/: knowledge_distillation.ipynb  readme.md
