[project]
name = "finance_agent"
version = "0.1.0"
description = "finance_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.2,<1.0.0"
]

[project.scripts]
finance_agent = "finance_agent.main:run"
run_crew = "finance_agent.main:run"
train = "finance_agent.main:train"
replay = "finance_agent.main:replay"
test = "finance_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
