[project]
name = "stock_agents"
version = "0.1.0"
description = "stock_agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.2,<1.0.0"
]

[project.scripts]
stock_agents = "stock_agents.main:run"
run_crew = "stock_agents.main:run"
train = "stock_agents.main:train"
replay = "stock_agents.main:replay"
test = "stock_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
